--- a/client/templates/master.html
+++ b/client/templates/master.html
@@ -7,7 +7,7 @@
                     <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand page-scroll" href="/">
-                    <i class="fa fa-play-circle"></i>  <span class="light">The</span> Quiz
+                    TheQuiz
                 </a>
             </div>
 
