--- a/client/templates/quiz.html
+++ b/client/templates/quiz.html
@@ -1,3 +1,17 @@
 <template name="quiz">
-<h1>Quiz</h1>
+	<section class="container content-section text-center">
+	    <div class="row">
+	        <div id class="col-lg-8 col-lg-offset-2">
+	            <h2 class="margin-bottom-small">ENTER YOUR NAME</h2>
+                <div id="name">
+                    <form>
+                        <div class="form-group">
+                            <input type="text" class="form-control" id="textbox" placeholder="">
+                        </div>
+                        <button type="submit" class="btn btn-default center-block">BEGIN</button>
+                    </form>
+                </div>
+	        </div>
+	    </div>
+	</section>
 </template>
