--- a/client/css/theme.css
+++ b/client/css/theme.css
@@ -342,14 +342,12 @@ footer p {
 
 ::-moz-selection {
     text-shadow: none;
-    background: #fcfcfc;
-    background: rgba(255,255,255,.2);
+    background: rgba(191, 191, 191,.5);
 }
 
 ::selection {
     text-shadow: none;
-    background: #fcfcfc;
-    background: rgba(255,255,255,.2);
+    background: rgba(191, 191, 191,.5);
 }
 
 img::selection {
