--- a/client/templates/quiz.html
+++ b/client/templates/quiz.html
@@ -3,7 +3,7 @@
 	    <div class="row">
 	        <div id class="col-lg-8 col-lg-offset-2">
 	            <h2 class="margin-bottom-small">ENTER YOUR NAME</h2>
-                <div id="name">
+                <div class="content-holder-50">
                     <form>
                         <div class="form-group">
                             <input type="text" class="form-control" id="textbox" placeholder="">
