--- a/client/templates/home.html
+++ b/client/templates/home.html
@@ -1,5 +1,11 @@
 <template name="home">
     <!-- Intro Header -->
+    <div
+        class="fb-like"
+        data-share="true"
+        data-width="450"
+        data-show-faces="true">
+    </div>
     <header class="intro">
         <div class="intro-body">
             <div class="container">
