--- a/client/templates/master.html
+++ b/client/templates/master.html
@@ -18,6 +18,7 @@
                     <li class="hidden">
                         <a href="#page-top"></a>
                     </li>
+                    {{> login}}
                     <li>
                         <a class="page-scroll" href="/">Home</a>
                     </li>
