Add quiz code and minor modifications

--- a/client/templates/about.html
+++ b/client/templates/about.html
@@ -1,7 +1,7 @@
 <template name="about">
 	<section class="container content-section text-center">
 	    <div class="row">
-	        <div id class="col-lg-8 col-lg-offset-2">
+	        <div id class="col-md-8 col-md-offset-2">
 	            <h1 class="margin-bottom-small">TheQuiz</h1>
 	            <h2 class="margin-bottom-small">A Women's Day Project</h2>
 	            <h3>Brought to you by VNNTU Team Programme 2015-16</h3>
@@ -10,33 +10,33 @@
 	</section>
 	<section class="container">
 	    <div class="row text-center">
-	        <div class="col-lg-5 col-lg-offset-1">
+	        <div class="col-md-5 col-md-offset-1">
 		        <div class="row">
 			        <h4 class="no-margin">Acknowledgement</h4>
-			        <div class="col-lg-4">
+			        <div class="col-md-4">
 			        	<span class="btn btn-circle"><i class="fa fa-html5"></i></span>
 			            <p class="no-margin"><u>Front-end</u></p>
 			            <p class="no-margin">Huynh Duc</p>
 			        </div>
-			        <div class="col-lg-4">
+			        <div class="col-md-4">
 			        	<span class="btn btn-circle"><i class="fa fa-database"></i></span>
 			            <p class="no-margin"><u>Back-end</u></p>
 			            <p class="no-margin">Huynh Duc</p>
 			        </div>
-			        <div class="col-lg-4">
+			        <div class="col-md-4">
 			        	<span class="btn btn-circle"><i class="fa fa-paint-brush"></i></span>
 			            <p class="no-margin"><u>Theme</u></p>
 			            <p class="no-margin"><a href="http://startbootstrap.com/">Greyscale</a></p>
 			        </div>
 			    </div>
 	        </div>
-	        <div id class="col-lg-5">
+	        <div id class="col-md-5">
 		        <div class="row">
 			        <h4 class="no-margin">More Info</h4>
-		        	<div class="col-lg-4 col-lg-offset-2">
+		        	<div class="col-md-4 col-md-offset-2">
 			        	<span class="btn btn-circle"><i class="fa fa-facebook"></i></span>
 			        </div>
-			        <div class="col-lg-4">
+			        <div class="col-md-4">
 			        	<span class="btn btn-circle"><i class="fa fa-globe"></i></span>
 			        </div>
 		        </div>
