--- a/client/templates/admin.html
+++ b/client/templates/admin.html
@@ -1,18 +1,18 @@
 <template name="admin">
 	<section class="container content-section text-center">
 	    <div class="row">
-	        <div id class="col-lg-8 col-lg-offset-2">
+	        <div id class="col-md-8 col-md-offset-2">
 	            <h1 class="margin-bottom-small">ADD QUESTION</h1>
                 <div class="content-holder-70">
                     <form>
                         <div class="form-group">
                             <textarea id="ques" class="form-control margin-bottom-small" rows="3" placeholder="Question"></textarea>
                             <div class="row">
-                            	<div class="col-lg-6 margin-bottom-small">
-                            		<input id="ans1" type="text" class="form-control" placeholder="Choice 1">
+                            	<div class="col-md-6 margin-bottom-small">
+                            		<input id="ans0" type="text" class="form-control" placeholder="Choice 1">
                             	</div>
-                            	<div class="col-lg-6 margin-bottom-small">
-                            		<input id="ans2" type="text" class="form-control" placeholder="Choice 2">
+                            	<div class="col-md-6 margin-bottom-small">
+                            		<input id="ans1" type="text" class="form-control" placeholder="Choice 2">
                             	</div>
                             </div>
                         </div>
@@ -24,9 +24,9 @@
 	</section>
 	<section class="container content-section text-center">
 	    <div class="row">
-	        <div class="col-lg-8 col-lg-offset-2">
-	            <h4>ALL ANSWERS ({{numOfQuestions}})</h4>
-                <div class="content-holder-70">
+	        <div class="col-md-8 col-md-offset-2">
+	            <h4>ALL QUESTIONS ({{numOfQuestions}})</h4>
+                <div class="content-holder-70" >
                     {{#each questions}}
                         {{> individualQuestion}}
                     {{/each}}
@@ -36,12 +36,9 @@
 	</section>
     <section class="container content-section text-center">
         <div class="row">
-            <div class="col-lg-8 col-lg-offset-2">
+            <div class="col-md-8 col-md-offset-2">
                 <h4>ALL USERS ()</h4>
                 <h5>Male</h5>
-                <div class="content-holder-70">
-
-                </div>
                 <h5>Female</h5>
             </div>
         </div>
@@ -50,15 +47,5 @@
     <br>
     <br>
     <br>
-    <br>
-</template>
-
-<template name="individualQuestion">
-    <h3>{{question}}</h3>
-    <div class="row">
-        {{#each answer}}
-            <div class="col-lg-6">{{this}}</div>
-        {{/each}}
-    </div>
     <br>
 </template>
