--- a/client/templates/home.html
+++ b/client/templates/home.html
@@ -13,7 +13,11 @@
                     <div class="col-md-8 col-md-offset-2">
                         <h1 class="brand-heading">TheQuiz</h1>
                         <p class="intro-text">Find your perfect match</p>
-                        <a href="/quiz" class="btn btn-default btn-lg">Start now</a>
+                        {{#if currentUser}}
+                            <button id="view-result" class="btn btn-default">View your match</button>
+                        {{else}}
+                            <button id="facebook-login" class="btn btn-default">Login with Facebook</button>
+                        {{/if}}
                     </div>
                 </div>
             </div>
