--- a/client/templates/quiz.html
+++ b/client/templates/quiz.html
@@ -1,17 +1,16 @@
 <template name="quiz">
-	<section class="container content-section text-center">
+	<section id="ready" class="container content-section text-center">
 	    <div class="row">
-	        <div id class="col-lg-8 col-lg-offset-2">
-	            <h2 class="margin-bottom-small">ENTER YOUR NAME</h2>
-                <div class="content-holder-50">
-                    <form>
-                        <div class="form-group">
-                            <input type="text" class="form-control" id="textbox" placeholder="">
-                        </div>
-                        <button type="submit" class="btn btn-default center-block">BEGIN</button>
-                    </form>
-                </div>
-	        </div>
+            <h1>Hi {{currentUser.services.facebook.first_name}}, <br>ARE YOU READY TO TAKE THEQUIZ?</h1>
+        	<button id="quiz-start" class="btn btn-default">START</button>
 	    </div>
+	</section>
+	<section class="container content-section text-center">
+        <div class="content-holder-70">
+        	{{answerChain}}
+	        {{#each questions}}
+	            {{> individualQuestion}}
+	        {{/each}}
+        </div>
 	</section>
 </template>
