--- a/client/templates/quiz.html
+++ b/client/templates/quiz.html
@@ -7,7 +7,7 @@
 	</section>
 	<section class="container content-section text-center">
         <div class="content-holder-70">
-        	{{answerChain}}
+        	<p id="quiz-progress" class="hidden">{{activeQuestion}} out of {{numOfQuestion}}</p>
 	        {{#each questions}}
 	            {{> individualQuestion}}
 	        {{/each}}
