--- a/client/templates/result.html
+++ b/client/templates/result.html
@@ -1,3 +1,22 @@
 <template name="result">
-	
+	<section id="ready" class="container content-section text-center content-holder-70">
+		<h1>Result</h1>
+		<div class="row">
+			<div class="col-md-5">
+				<h3>{{currentUser.services.facebook.name}}</h3>
+				<div class="img-holder center-block">
+					<img src="{{profilePicUrl}}" class="img-responsive center-block">
+				</div>
+			</div>
+			<div class="col-md-2">
+				<h3>+</h3>
+			</div>
+			<div class="col-md-5">
+				<h3>John Doe</h3>
+				<div class="img-holder center-block">
+					<img src="http://placehold.it/250x250" class="img-responsive center-block">
+				</div>
+			</div>
+		</div>
+	</section>
 </template>
