--- a/client/templates/result.html
+++ b/client/templates/result.html
@@ -3,7 +3,7 @@
 		<h1>Result</h1>
 		<div class="row">
 			<div class="col-md-5">
-				<h3>{{currentUser.services.facebook.name}}</h3>
+				<h3>{{currentUser.profile.name}}</h3>
 				<div class="img-holder center-block">
 					<img src="{{profilePicUrl}}" class="img-responsive center-block">
 				</div>
@@ -12,9 +12,9 @@
 				<h3>+</h3>
 			</div>
 			<div class="col-md-5">
-				<h3>John Doe</h3>
+				<h3>{{matchName}}</h3>
 				<div class="img-holder center-block">
-					<img src="http://placehold.it/250x250" class="img-responsive center-block">
+					<img src="{{matchPicUrl}}" class="img-responsive center-block">
 				</div>
 			</div>
 		</div>
