--- a/client/templates/about.html
+++ b/client/templates/about.html
@@ -22,6 +22,7 @@
 			        	<span class="btn btn-circle"><i class="fa fa-database"></i></span>
 			            <p class="no-margin"><u>Back-end</u></p>
 			            <p class="no-margin">Huynh Duc</p>
+			            <p class="no-margin">Long Vu</p>
 			        </div>
 			        <div class="col-md-4">
 			        	<span class="btn btn-circle"><i class="fa fa-paint-brush"></i></span>
