--- a/client/templates/admin.html
+++ b/client/templates/admin.html
@@ -28,7 +28,7 @@
 	            <h4>ALL QUESTIONS ({{numOfQuestions}})</h4>
                 <div class="content-holder-70" >
                     {{#each questions}}
-                        {{> individualQuestion}}
+                        {{> questionAdmin}}
                     {{/each}}
                 </div>
 	        </div>
