Translate app into Vietnamese

--- a/client/templates/login.html
+++ b/client/templates/login.html
@@ -1,6 +1,6 @@
 <template name="login">
     {{#if currentUser}}
         {{currentUser.services.facebook.name}}
-        <button id="logout" class="btn btn-default">Logout</button>
+        <button id="logout" class="btn btn-default">Thoát</button>
     {{/if}}
 </template>
