--- a/client/css/custom.css
+++ b/client/css/custom.css
@@ -23,3 +23,11 @@
 	width: 250px;
 	height: 250px;
 }
+.home-footer {
+	position: absolute;
+	bottom: 0px;
+	width: 100vw;
+}
+.credit div p {
+	font-size: medium;
+}
