--- a/client/templates/about.html
+++ b/client/templates/about.html
@@ -3,29 +3,32 @@
 	    <div class="row">
 	        <div id class="col-md-8 col-md-offset-2">
 	            <h1 class="margin-bottom-small">TheQuiz</h1>
-	            <h2 class="margin-bottom-small">A Women's Day Project</h2>
-	            <h3>Brought to you by VNNTU Team Programme 2015-16</h3>
+	            <h2 class="margin-bottom-small">Một dự án đặc biệt ngày 8/3</h2>
+	            <h3>được phát triển bởi VNNTU Team Programme 2015-16</h3>
 	        </div>
 	    </div>
 	</section>
 	<section class="container">
 	    <div class="row text-center">
 	        <div class="col-md-5 col-md-offset-1">
-		        <div class="row">
-			        <h4 class="no-margin">Acknowledgement</h4>
+		        <div class="row credit">
+			        <h4 class="margin-bottom-small">Credit</h4>
 			        <div class="col-md-4">
-			        	<span class="btn btn-circle"><i class="fa fa-html5"></i></span>
-			            <p class="no-margin"><u>Front-end</u></p>
-			            <p class="no-margin">Huynh Duc</p>
+			        	<i class="fa fa-4x fa-code"></i>
+			            <p class="no-margin"><u>Lập trình viên</u></p>
+			            <p class="no-margin">Huỳnh Đức</p>
+			            <p class="no-margin">Long Vũ</p>
 			        </div>
 			        <div class="col-md-4">
-			        	<span class="btn btn-circle"><i class="fa fa-database"></i></span>
-			            <p class="no-margin"><u>Back-end</u></p>
-			            <p class="no-margin">Huynh Duc</p>
-			            <p class="no-margin">Long Vu</p>
+			        	<i class="fa fa-4x fa-cogs"></i>
+			            <p class="no-margin"><u>Thuật toán</u></p>
+			            <p class="no-margin">Việt Hoàng</p>
+			            <p class="no-margin">Xuân Vũ</p>
+			            <p class="no-margin">Huỳnh Đức</p>
+			            <p class="no-margin">Long Vũ</p>
 			        </div>
 			        <div class="col-md-4">
-			        	<span class="btn btn-circle"><i class="fa fa-paint-brush"></i></span>
+			        	<i class="fa fa-4x fa-paint-brush"></i>
 			            <p class="no-margin"><u>Theme</u></p>
 			            <p class="no-margin"><a href="http://startbootstrap.com/">Greyscale</a></p>
 			        </div>
@@ -33,7 +36,7 @@
 	        </div>
 	        <div id class="col-md-5">
 		        <div class="row">
-			        <h4 class="no-margin">More Info</h4>
+			        <h4 class="no-margin">Các trang thông tin chính</h4>
 		        	<div class="col-md-4 col-md-offset-2">
 			        	<span class="btn btn-circle"><i class="fa fa-facebook"></i></span>
 			        </div>
