--- a/client/templates/home.html
+++ b/client/templates/home.html
@@ -12,20 +12,19 @@
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
                         <h1 class="brand-heading">TheQuiz</h1>
-                        <p class="intro-text">Find your perfect match</p>
                         {{#if currentUser}}
                             {{#if completed}}
                                 {{#if isFemale}}
-                                    <button id="view-result" class="btn btn-default">View your match</button>
+                                    <button id="view-result" class="btn btn-default">Xem kết quả</button>
                                 {{else}}
-                                    <p>Your answers have been recorded</p>
-                                    <p>Thank you for your time</p>
+                                    <p>Đáp án của bạn đã được lưu thành công</p>
+                                    <p>Cảm ơn bạn đã dành thời gian tham gia TheQuiz</p>
                                 {{/if}}
                             {{else}}
-                                <button id="take-quiz" class="btn btn-default">Start the quiz</button>
+                                <button id="take-quiz" class="btn btn-default">Bắt đầu</button>
                             {{/if}}
                         {{else}}
-                            <button id="facebook-login" class="btn btn-default">Login with Facebook</button>
+                            <button id="facebook-login" class="btn btn-default">Đăng nhập Bằng Facebook</button>
                         {{/if}}
                     </div>
                 </div>
@@ -34,8 +33,8 @@
     </header>
 
     <!-- Footer -->
-    <footer>
-        <div class="container text-center">
+    <footer class="home-footer">
+        <div class="container text-center" style="width:100%">
             <p>&copy; TheQuiz 2016</p>
         </div>
     </footer>
