--- a/client/templates/master.html
+++ b/client/templates/master.html
@@ -15,10 +15,10 @@
             <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="/">Home</a>
+                        <a href="/">Trang chủ</a>
                     </li>
                     <li>
-                        <a href="/about">About</a>
+                        <a href="/about">Thông tin</a>
                     </li>
                     <li style="margin-top: 9px">
                         {{> login}}
