--- a/client/templates/result.html
+++ b/client/templates/result.html
@@ -1,6 +1,6 @@
 <template name="result">
 	<section id="ready" class="container content-section text-center content-holder-70">
-		<h1>Result</h1>
+		<h1>Kết quả</h1>
 		<div class="row">
 			<div class="col-md-5">
 				<h3>{{currentUser.profile.name}}</h3>
@@ -9,7 +9,7 @@
 				</div>
 			</div>
 			<div class="col-md-2">
-				<h3>+</h3>
+				<h3>&amp;</h3>
 			</div>
 			<div class="col-md-5">
 				<h3>{{matchName}}</h3>
