Fix publish issue

--- a/client/templates/quiz.html
+++ b/client/templates/quiz.html
@@ -7,7 +7,7 @@
 	</section>
 	<section class="container content-section text-center">
         <div class="content-holder-70">
-        	<p id="quiz-progress" class="hidden">Câu hỏi số {{activeQuestion}} trong tổng số {{numOfQuestion}} câu hỏi</p>
+        	<p id="quiz-progress" class="hidden">Câu hỏi {{activeQuestion}}/{{numOfQuestion}}</p>
 	        {{#each questions}}
 	            {{> individualQuestion}}
 	        {{/each}}
