Improve admin's functionalities

--- a/client/templates/thank-you.html
+++ b/client/templates/thank-you.html
@@ -1,7 +1,7 @@
 <template name="thankYou">
 	<section class="container content-section text-center">
-		<h1>Your answers has been recorded</h1>
-		<h2>Thank you for your time</h2>
-		<p>Brace yourself though, tags are coming. Lots and lots of tags.</p>
+		<h1>Đáp án của bạn đã được lưu thành công</h1>
+		<h2>Cảm ơn bạn đã dành thời gian tham gia TheQuiz</h2>
+		<p>(chuẩn bị noti đi, sắp được tag rồi đó)</p>
 	</section>
 </template>
