--- a/client/templates/admin.html
+++ b/client/templates/admin.html
@@ -37,9 +37,10 @@
     <section class="container content-section text-center">
         <div class="row">
             <div class="col-md-8 col-md-offset-2">
-                <h4>ALL USERS ()</h4>
-                <h5>Male</h5>
-                <h5>Female</h5>
+                <h4>ALL ANSWERS ({{numOfAnswers}})</h4>
+                {{#each answerChains}}
+                    <p>{{userName}} ({{gender}}) - {{answerChain}}</p>
+                {{/each}}
             </div>
         </div>
     </section>
