--- a/client/templates/quiz.html
+++ b/client/templates/quiz.html
@@ -1,7 +1,7 @@
 <template name="quiz">
 	<section id="ready" class="container content-section text-center">
 	    <div class="row">
-            <h1>Chào {{currentUser.services.facebook.first_name}}, <br>BẠN ĐÃ SẴN SÀNG ĐỂ BẮT ĐẦU THEQUIZ CHƯA?</h1>
+            <h1>CHÀO {{currentUser.services.facebook.first_name}}, <br>BẠN ĐÃ SẴN SÀNG ĐỂ BẮT ĐẦU THEQUIZ CHƯA?</h1>
         	<button id="quiz-start" class="btn btn-default">Sẵn sàng</button>
 	    </div>
 	</section>
