--- a/client/templates/admin.html
+++ b/client/templates/admin.html
@@ -1,52 +1,85 @@
 <template name="admin">
 	<section class="container content-section text-center">
-	    <div class="row">
-	        <div id class="col-md-8 col-md-offset-2">
-	            <h1 class="margin-bottom-small">ADD QUESTION</h1>
-                <div class="content-holder-70">
-                    <form>
-                        <div class="form-group">
-                            <textarea id="ques" class="form-control margin-bottom-small" rows="3" placeholder="Question"></textarea>
-                            <div class="row">
-                            	<div class="col-md-6 margin-bottom-small">
-                            		<input id="ans0" type="text" class="form-control" placeholder="Choice 1">
-                            	</div>
-                            	<div class="col-md-6 margin-bottom-small">
-                            		<input id="ans1" type="text" class="form-control" placeholder="Choice 2">
-                            	</div>
-                            </div>
-                        </div>
-                        <button id="submit" type="submit" class="btn btn-default center-block">SUBMIT</button>
-                    </form>
-                </div>
-	        </div>
-	    </div>
+		<div class="row">
+			<div id class="col-md-8 col-md-offset-2">
+				<h1 class="margin-bottom-small">ADD QUESTION</h1>
+				<div class="content-holder-70">
+					<form>
+						<div class="form-group">
+							<textarea id="ques" class="form-control margin-bottom-small" rows="3" placeholder="Question"></textarea>
+							<div class="row">
+								<div class="col-md-6 margin-bottom-small">
+									<input id="ans0" type="text" class="form-control" placeholder="Choice 1">
+								</div>
+								<div class="col-md-6 margin-bottom-small">
+									<input id="ans1" type="text" class="form-control" placeholder="Choice 2">
+								</div>
+							</div>
+						</div>
+						<button id="submit" type="submit" class="btn btn-default center-block">SUBMIT</button>
+					</form>
+				</div>
+			</div>
+		</div>
 	</section>
-	<section class="container content-section text-center">
-	    <div class="row">
-	        <div class="col-md-8 col-md-offset-2">
-	            <h4>ALL QUESTIONS ({{numOfQuestions}})</h4>
-                <div class="content-holder-70" >
-                    {{#each questions}}
-                        {{> questionAdmin}}
-                    {{/each}}
-                </div>
-	        </div>
-	    </div>
+	<br>
+	<br>
+	<section class="container text-center">
+		<div class="row">
+			<div class="col-md-8 col-md-offset-2">
+				<h4>ALL ANSWERS ({{numOfAnswers}}/{{numOfUsers}})</h4>
+				<table class="table table-bordered">
+					<thead>
+						<tr>
+							<th>Name</th>
+							<th>Gender</th>
+							<th>Answer Chain</th>
+							<th>Match</th>
+							<th>%</th>
+						</tr>
+					</thead>
+					<tbody>
+						{{#each answerChains}}
+							<tr>
+								<td>{{userName}}</td>
+								<td>{{gender}}</td>
+								<td>{{answerChain}}</td>
+								<td>{{match}}</td>
+								<td>{{percentage}}</td>
+							</tr>
+						{{/each}}
+					</tbody>
+				</table>
+			</div>
+		</div>
 	</section>
-    <section class="container content-section text-center">
-        <div class="row">
-            <div class="col-md-8 col-md-offset-2">
-                <h4>ALL ANSWERS ({{numOfAnswers}})</h4>
-                {{#each answerChains}}
-                    <p>{{userName}} ({{gender}}) - {{answerChain}}</p>
-                {{/each}}
-            </div>
-        </div>
-    </section>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
+	<br>
+	<section class="container text-center">
+		<div class="row">
+			<div class="col-md-8 col-md-offset-2">
+				<h4>ALL QUESTIONS ({{numOfQuestions}})</h4>
+				<table class="table table-bordered">
+					<thead>
+						<tr>
+							<th>Index</th>
+							<th>Question</th>
+							<th>Choice 1</th>
+							<th>Choice 2</th>
+						</tr>
+					</thead>
+					<tbody>
+						{{#each questions}}
+							<tr>
+								<td>{{index}}</td>
+								<td>{{question}}</td>
+								{{#each answer}}
+									<td>{{this}}</td>
+								{{/each}}
+							</tr>
+						{{/each}}
+					</tbody>
+				</table>
+			</div>
+		</div>
+	</section>
 </template>
