--- a/client/css/custom.css
+++ b/client/css/custom.css
@@ -28,7 +28,7 @@
 	font-size: medium;
 }
 .result {
-	padding-top: 150px;
+	padding-top: 130px;
 }
 .percent {
 	padding: 15px 20px 20px 20px;
@@ -41,6 +41,23 @@ img {
 	max-width:100%;
 	max-height:100%;
 }
+.img-holder {
+	height: 250px;
+}
 .share {
 	margin-top: 50px;
+}
+.left-img {
+	float: right;
+}
+.right-img {
+	float: left;
+}
+@media (max-width:1199px) {
+	.left-img {
+		float: none;
+	}
+	.right-img {
+		float: none;
+	}
 }
